--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,18 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  database: push
+  pool: 5
+  username: pguser
+  password: 1111
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: 5
 
 development:
   <<: *default
   database: puskinhapp_development
+  username: pguser
+  password: 1111
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,7 +63,8 @@ development:
 test:
   <<: *default
   database: puskinhapp_test
-
+  username: pguser
+  password: 1111
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -81,5 +87,5 @@ test:
 production:
   <<: *default
   database: puskinhapp_production
-  username: puskinhapp
-  password: <%= ENV['PUSKINHAPP_DATABASE_PASSWORD'] %>
+  username: pguser
+  password: 1111
